--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
   "name": "gyunu-boilerplate",
   "version": "1.0.0",
-  "description": "A basic webpack and sass boilerplate.",
+  "description": "A Webpack, TypeScript and Sass Boilerplate",
   "main": "index.js",
   "scripts": {
-    "preinstall": "mkdir dist; mkdir dist/js; mkdir dist/css; mkdir src; mkdir src/js; mkdir src/ts; mkdir src/sass; mkdir src/fonts; touch src/js/index.js; touch src/sass/index.scss; touch src/sass/config.scss; touch dist/index.html;",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf src/js; echo \"\n\nRunning Sass\n\n\"; node-sass --output-style --source-map-root --source-map dist/css/css.map src/sass/index.scss dist/css/min.css; echo \"\n\nRunning tslint\n\n\"; tslint -indent tabs src/ts/**/*.ts; echo \"\n\nRunning Webpack\n\n\"; webpack --config webpack.build.js; echo \"\n\nCopying Fonts\n\n\"; cp -r src/fonts dist/fonts; ",
-    "deploy": "rm -rf src/js; echo -e \n\nRemoving source maps\n\n'; rm dist/css/*.map && rm dist/js/*.map; echo -e \n\nRunning Sass\n\n';  node-sass src/sass/index.scss dist/css/min.css; echo -e \n\nRunning tslint\n\n'; tslint -indent tabs src/ts/**/*.ts; echo -e \n\nRunning Webpack\n\n'; webpack --config webpack.deploy.js echo \"\n\nCopying Fonts\n\n\"; cp -r src/fonts dist/fonts;"
+		"lint:js": "rm tslint.json && tslint -indent tabs src/ts/**/*.ts",
+		"build:js": "npm run lint:js && rm -rf src/js && rm -rf dist/assets/js && webpack --config webpack.build.js",
+    "build:css": "node-sass --output-style --source-map-root --source-map dist/assets/css/css.map src/sass/index.scss dist/assets/css/min.css",
+		"build:img": "rm -rf dist/img && imagemin src/img/* --out-dir=dist/assets/img",
+		"build:font": "mkdir -p dist/assets/fonts && cp -r src/fonts/* dist/assets/fonts/",
+		"deploy:css": "rm -rf dist/assets/css/* && node-sass --output-style compressed src/sass/index.scss dist/assets/css/min.css",
+		"deploy:js": "npm run lint:js && rm -rf src/js/ && rm -rf dist/assets/js/* && webpack --config webpack.deploy.js",
+		"deploy:img": "npm run build:img",
+		"deploy:font": "rm -rf dist/asset/fonts/* && cp -r src/fonts/* dist/assets/fonts",
+		"live-reload": "./node_modules/.bin/webpack-dev-server --content-base './dist'",
+    "watch": "parallelshell 'npm run -s build:js -- -w' 'npm run -s build:css -- -w' 'npm run live-reload'",
+		"build": "npm run -s build:js && npm run -s build:css && npm run -s build:img && npm run -s build:font",
+		"purge": "rm -rf dist/assets",
+		"deploy": "npm run -s deploy:css && npm run -s deploy:js && npm run -s deploy:img && npm run -s deploy:font"
   },
   "author": "Gyunu",
   "license": "MIT",
   "dependencies": {
-    "ts-loader": "^0.8.2",
-		"node-sass": "^3.5.3",
-		"typescript": "^1.8.10",
-		"webpack": "^1.13.0"
+		"ts-loader": "^0.8.2",
+    "node-sass": "^3.5.3",
+    "typescript": "^1.8.10",
+    "webpack": "^1.13.0"
+  },
+	"devDependencies": {
+    "parallelshell": "^2.0.0",
+    "sassdoc": "^2.1.20",
+    "webpack-dev-server": "^1.16.2"
   }
 }
