--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "rewriteTsconfig": true
   },
   "files": [
+    "./src/ts/base/ajax.ts",
+    "./src/ts/base/modal.ts",
+    "./src/ts/base/popup.ts",
     "./src/ts/index.ts"
   ]
 }
