--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,9 @@
     "./src/ts/base/ajax.ts",
     "./src/ts/base/modal.ts",
     "./src/ts/base/popup.ts",
-    "./src/ts/index.ts"
+    "./src/ts/config.ts",
+    "./src/ts/index.ts",
+    "./src/ts/lang/en.lang.ts",
+    "./src/ts/lang/index.ts"
   ]
 }
